Main page and headphone info

--- a/client/pages/error.html
+++ b/client/pages/error.html
@@ -1,1 +1,4 @@
-<h2>There was an error fetching data from the server</h2>
+<div>
+    <img src="public/Images/error.png"/>
+    <h2>There was an error fetching data from the server</h2>
+</div>
