--- a/client/pages/about.html
+++ b/client/pages/about.html
@@ -1,8 +1,9 @@
-<br>
-<div layout="row" layout-align="space-around" class="aboutTitle">
-	About 
+<div class="cover_img" style="height: 156px; background-position: inherit;">
+	<div class="foryou_title" style=" width: 220px; margin-top: 58px;">
+		<!-- <canvas id="titlecanvas" height="100" width="400"></canvas> -->
+		<label>About</label>
+	</div>
 </div>
-<br>
 <div class="about-container" layout="row" layout-align="space-around">
 		<div class="aboutContent">
 				Headphones (or head-phones in the early days of telephony and radio) are a pair of small loudspeaker drivers worn on
